[package]
name = "joinmarket-core"
version = "0.1.0"
edition = "2021"

[dependencies]
secp256k1 = { version = "0.28", features = ["global-context", "rand-std", "recovery"] }
x25519-dalek = { version = "2", features = ["static_secrets", "getrandom"] }
crypto_secretbox = "0.1"
bitcoin_hashes = "0.13"
bs58 = "0.5"
data-encoding = "2"
sha3 = "0.10"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
rand = "0.9"
base64 = "0.21"

[dev-dependencies]
hex = "0.4"
serial_test = "3"
tempfile = "3"
